link footer sistemati

--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
             <h4>Increase Your Traffic</h4>
           </div>
           <div class="text-col-footer">
-            <p>Ad Software</p>
-            <p>Blog Software</p>
-            <p>SEO Software</p>
-            <p>Social Media Software</p>
-            <p>Content Management System</p>
+            <div><a href="#">Ad Software</a></div>
+            <div><a href="#">Blog Software</a></div>
+            <div><a href="#">SEO Software</a></div>
+            <div><a href="#">Social Media Software</a></div>
+            <div><a href="#">Content Management System</a></div>
           </div>
         </div>
 
@@ -551,11 +551,11 @@
             <h4>Connect With Leads</h4>
           </div>
           <div class="text-col-footer">
-            <p>Find New Prospects</p>
-            <p>Email Tracking</p>
-            <p>Sales Email Template</p>
-            <p>Click to Call Your Leads</p>
-            <p>Email Marketing</p>
+            <div><a href="#">Find New Prospects</a></div>
+            <div><a href="#">Email Tracking</a></div>
+            <div><a href="#">Sales Email Template</a></div>
+            <div><a href="#">Click to Call Your Leads</a></div>
+            <div><a href="#">Email Marketing</a></div>
           </div>
         </div>
 
@@ -564,11 +564,11 @@
             <h4>Close and Manage Leads</h4>
           </div>
           <div class="text-col-footer">
-            <p>Document Tracking Tool</p>
-            <p>Meeting Schedule Tool</p>
-            <p>Sales Automation Tool</p>
-            <p>Lead Management Tool</p>
-            <p>Pipeline Management Tool</p>
+            <div><a href="#">Document Tracking Tool</a></div>
+            <div><a href="#">Meeting Schedule Tool</a></div>
+            <div><a href="#">Sales Automation Tool</a></div>
+            <div><a href="#">Lead Management Tool</a></div>
+            <div><a href="#">Pipeline Management Tool</a></div>
           </div>
         </div>
 
@@ -577,20 +577,22 @@
             <h4>Support and Tools</h4>
           </div>
           <div class="text-col-footer">
-            <p>HubSpot Partners</p>
-            <p>Join a Local User Group</p>
-            <p>Get a Free Website Report</p>
-            <p>HubSpot Templates</p>
-            <p>Free Tools & Generators</p>
+            <div><a href="#">HubSpot Partners</a></div>
+            <div><a href="#">Join a Local User Group</a></div>
+            <div><a href="#">Get a Free Website Report</a></div>
+            <div><a href="#">HubSpot Templates</a></div>
+            <div><a href="#">Free Tools & Generators</a></div>
             <div>
-              <a href="#" class="btn in-bl btn-foot">Contact HubSpot Support</a>
+              <a href="#" id="btn-foot" class="btn in-bl btn-foot"
+                >Contact HubSpot Support</a
+              >
             </div>
             <div class="social">
-              <span class="in-bl"><i class="fab fa-facebook-f"></i></span>
-              <span class="in-bl"><i class="fab fa-instagram"></i></span>
-              <span class="in-bl"><i class="fab fa-youtube"></i></span>
-              <span class="in-bl"><i class="fab fa-twitter"></i></span>
-              <span class="in-bl"><i class="fab fa-linkedin"></i></span>
+              <a href=""><i class="fab fa-facebook-f"></i> </a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-youtube"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
         </div>
