ultima sezione footer

--- a/index.html
+++ b/index.html
@@ -596,6 +596,24 @@
             </div>
           </div>
         </div>
+        <div class="languages-footer">
+          <div class="languages-item in-bl">
+            <p>English</p>
+          </div>
+          <div class="languages-item in-bl">
+            <p>Deutsch</p>
+          </div>
+          <div class="languages-item in-bl">
+            <p>日本語</p>
+          </div>
+          <div class="languages-item in-bl">
+            <p>Espanol</p>
+          </div>
+          <div class="languages-item in-bl"><p>Portuguese</p></div>
+          <div class="languages-item in-bl">
+            <p>Français</p>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
