legal stuff e logo aggiunto

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
     <!-- /main -->
 
-    <footer>
+    <footer class="clearfix">
       <div class="content-footer w-70 text-white clearfix">
         <div class="col-footer float-left">
           <div class="title-col-footer">
@@ -613,6 +613,15 @@
           <div class="languages-item in-bl">
             <p>Français</p>
           </div>
+        </div>
+      </div>
+      <div class="last-section-footer w-70">
+        <div class="logo-last float-left">
+          <img src="img/logo-white.svg" alt="logo-white" />
+        </div>
+        <div class="legal-last float-right">
+          <a href="#">Legal Stuff</a>
+          <a href="#">Privacy Policy</a>
         </div>
       </div>
     </footer>
