--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <i class="fas fa-search in-bl"></i>
               </div>
               <div class="login in-bl">
-                <a href="#" class="btn">Log In</a>
+                <a href="#" class="btn" id="login">Log In</a>
               </div>
               <div class="in-bl">
                 <a href="#" class="btn btn-orange">GetHubspotFree</a>
